tracking pdf lfs

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,28 @@
 thesis_cgo.pdf filter=lfs diff=lfs merge=lfs -text
+figures/2d_scatter_wt.pdf filter=lfs diff=lfs merge=lfs -text
+figures/2d_scatter_yd.pdf filter=lfs diff=lfs merge=lfs -text
+figures/FM_dist.pdf filter=lfs diff=lfs merge=lfs -text
+figures/FM_hist.pdf filter=lfs diff=lfs merge=lfs -text
+figures/FM_rainbows.pdf filter=lfs diff=lfs merge=lfs -text
+figures/consensus.pdf filter=lfs diff=lfs merge=lfs -text
+figures/dc_strucs.pdf filter=lfs diff=lfs merge=lfs -text
+figures/dc_time.pdf filter=lfs diff=lfs merge=lfs -text
+figures/dc_ts.pdf filter=lfs diff=lfs merge=lfs -text
+figures/ea_diagram.pdf filter=lfs diff=lfs merge=lfs -text
+figures/eigenvals.pdf filter=lfs diff=lfs merge=lfs -text
+figures/glob_overlay.pdf filter=lfs diff=lfs merge=lfs -text
+figures/hydro_plot_s444d.pdf filter=lfs diff=lfs merge=lfs -text
+figures/lines_dc.pdf filter=lfs diff=lfs merge=lfs -text
+figures/mcgilletdsample.pdf filter=lfs diff=lfs merge=lfs -text
+figures/model.pdf filter=lfs diff=lfs merge=lfs -text
+figures/representatives.pdf filter=lfs diff=lfs merge=lfs -text
+figures/rmsd.pdf filter=lfs diff=lfs merge=lfs -text
+figures/rmsd_10.pdf filter=lfs diff=lfs merge=lfs -text
+figures/thesis_cgo.pdf filter=lfs diff=lfs merge=lfs -text
+figures/wt_contacts.pdf filter=lfs diff=lfs merge=lfs -text
+figures/wt_hist.pdf filter=lfs diff=lfs merge=lfs -text
+figures/wt_ss.pdf filter=lfs diff=lfs merge=lfs -text
+figures/yd_2gauss.pdf filter=lfs diff=lfs merge=lfs -text
+figures/yd_contacts.pdf filter=lfs diff=lfs merge=lfs -text
+figures/yd_hist.pdf filter=lfs diff=lfs merge=lfs -text
+figures/yd_ss.pdf filter=lfs diff=lfs merge=lfs -text
